--- a/index.html
+++ b/index.html
@@ -166,11 +166,11 @@
 	</dl></div>
 	<div class="bd"><dl class="cl">
 		<a href="https://lingfengqvq2679.github.io/">
-	    <dt><img src="https://lingfengqvq2679.github.io/index_files/OIP-C.NVNGW8PWhjjkxs5k-hPIEwHaHa"></dt>
+	    <dt><img src="https://tse2-mm.cn.bing.net/th/id/OIP-C.NVNGW8PWhjjkxs5k-hPIEwHaHa?w=195&h=195&c=7&r=0&o=5&dpr=1.5&pid=1.7"></dt>
 	    </a><dd><a href="https://lingfengqvq2679.github.io/"></a><ul class="cl"><a href="https://lingfengqvq2679.github.io/">
 	    <li><h2>神庙逃亡</h2></li>
 	    <li><span>24.7M</span> <span>爱思正版</span>
-	    </li></a><li><a href="file:///D:/%E7%81%B5%C2%B7%E4%BA%92%E8%81%94/%E6%BA%90%E7%A0%81/beta/index.html">
+	    </li></a><li><a href="https://lingfengqvq2679.github.io">
 </a><a href="https://lingfengqvq.lanzouv.com/iu5H420lihva">点击下载</a>
 </li>
 	    </ul></dd>
