--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 			<div class="tab">
 				<a href="https://lingfengqvq.mysxl.cn/yin">
 					<i class="icon">
-						<img src="https://lingfengqvq2679.github.io/index_files/OIP-C.eVqS2BEGJXqF8CYx6ViyZAHaHP">
+						<img src="https://tse4-mm.cn.bing.net/th/id/OIP-C.9jkv6dFpuNJZZ0haB3icWAHaHa?w=160&h=180&c=7&r=0&o=5&dpr=1.5&pid=1.7">
 					</i>
 					<span>
 						相似网站
