--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     </header>
         <div id="list-classtab">
 		<ul class="cl">
-        <li class="https://lingfengqvq2679.github.io"><a>主页</a></li>
+        <li class="on"><a href="https://lingfengqvq2679.github.io">主页</a></li>
         <li><a href="https://lingfengqvq.lanzouv.com/b00rn5vhid">个人正版</a></li>
 		<li><a href="https://lingfengqvq.lanzouv.com/b00rn3egpa">爱思正版</a></li>
         <li><a href="https://lingfengqvq.lanzouv.com/b00rn3egoj">越狱软件</a></li></ul></div>
