--- a/qita/zhuye/ganxei.html
+++ b/qita/zhuye/ganxei.html
@@ -30,7 +30,7 @@
 </touxianglan>
 <h1>感谢名单</h1>
 <zhuneirong style="disply: block;padding: 30px;max-width: 700px;min-height: 70vh;width: 90%;letter-spacing: 1px;line-height: 1.7;">
-<a href="https://space.bilibili.com/544229833">1.洛子猫 提供了一些宝贵意见</a>
+<a href="https://space.bilibili.com/544229833">1.洛子猫Luozicat 提供了现网站的域名</a>
 <p> </p>
 <a href="https://space.bilibili.com/1585157906">2.爱玩GTA的Jerry 提供了ipa资源</a>
 <p> </p>
@@ -41,6 +41,7 @@
 <a href="https://www.bilibili.com/">4.粉丝/群友们 没有你们的支持我根本走不到现在！</a>
 <p> </p>
 <b>前方施工中...</b>
+<a href="https://linghulian.x-ipa.online/">返回</a>
 </zhuneirong>
 
 
