--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
 	<h3>应用推荐</h3></div>
     <div class="bd">
 <dl class="cl">
-		<a href="https://lingfengqvq2679.github.io/">
+		<a href="https://linghulian.x-ipa.online/">
         <dt><img src="images/icon/cloudmusic.png"></dt>
-        </a><dd><a href="https://lingfengqvq2679.github.io/"></a><ul class="cl">
-<a href="https://lingfengqvq2679.github.io/">
+        </a><dd><a href="https://linghulian.x-ipa.online/"></a><ul class="cl">
+<a href="https://linghulian.x-ipa.online/">
         <li>
 <h2>网易云音乐</h2>
 </li>
@@ -119,17 +119,17 @@
         </li>
 </a>
 <li>
-<a href="https://lingfengqvq2679.github.io/">
+<a href="https://linghulian.x-ipa.online/">
 </a>
 <a href="https://lingfengqvq.lanzouv.com/ib0Ne20lj22h?webpage=CDlXN1o1BGFSNgJkVDRQaQBiADVRcgQ3BzgAMlwxADJSYgJjCmcPbAUvAmU_c">点击下载</a></li>
         </ul></dd>
 	</dl></div>
 	<div class="bd"><dl class="cl">
-		<a href="https://lingfengqvq2679.github.io/"><dt>
+		<a href="https://linghulian.x-ipa.online/"><dt>
 <img src="https://tse1-mm.cn.bing.net/th/id/OIP-C.u3BWC3fvEep7IHfJRPT2lQHaHa?w=165&amp;h=180&amp;c=7&amp;r=0&amp;o=5&amp;dpr=1.5&amp;pid=1.7"></dt>
 	    </a>
-<dd><a href="https://lingfengqvq2679.github.io/"></a><ul class="cl">
-<a href="https://lingfengqvq2679.github.io/">
+<dd><a href="https://linghulian.x-ipa.online/"></a><ul class="cl">
+<a href="https://linghulian.x-ipa.online/">
 	    <li><h2>我的世界</h2></li>
 	    <li><span>29.2M</span> <span>爱思正版</span>
 	    </li></a><li><a href="https://lingfengqvq2679.github.io/">
@@ -139,10 +139,10 @@
 	    </ul></dd>
 	</dl></div>
 	<div class="bd"><dl class="cl">
-		<a href="https://lingfengqvq2679.github.io/">
+		<a href="https://linghulian.x-ipa.online/">
 	    <dt>
 <img src="https://tse3-mm.cn.bing.net/th/id/OIP-C.dbJX6E83cF9adLgFwOWMuQAAAA?w=178&amp;h=180&amp;c=7&amp;r=0&amp;o=5&amp;dpr=1.5&amp;pid=1.7"></dt>
-	    </a><dd><a href="https://lingfengqvq2679.github.io/"></a><ul class="cl"><a href="file:///D:/%E7%81%B5%C2%B7%E4%BA%92%E8%81%94/%E6%BA%90%E7%A0%81/beta/index.html">
+	    </a><dd><a href="https://linghulian.x-ipa.online/"></a><ul class="cl"><a href="file:///D:/%E7%81%B5%C2%B7%E4%BA%92%E8%81%94/%E6%BA%90%E7%A0%81/beta/index.html">
 	    <li>
 <h2>
 爱思助手
@@ -158,19 +158,19 @@
 	    </li>
 </a>
 <li>
-<a href="https://lingfengqvq2679.github.io/">
+<a href="https://linghulian.x-ipa.online/">
 </a>
 <a href="https://lingfengqvq.lanzouv.com/iidV620ll5te">点击下载</a>
 </li>
 	    </ul></dd>
 	</dl></div>
 	<div class="bd"><dl class="cl">
-		<a href="https://lingfengqvq2679.github.io/">
+		<a href="https://linghulian.x-ipa.online/">
 	    <dt><img src="https://tse2-mm.cn.bing.net/th/id/OIP-C.NVNGW8PWhjjkxs5k-hPIEwHaHa?w=195&h=195&c=7&r=0&o=5&dpr=1.5&pid=1.7"></dt>
-	    </a><dd><a href="https://lingfengqvq2679.github.io/"></a><ul class="cl"><a href="https://lingfengqvq2679.github.io/">
+	    </a><dd><a href="https://linghulian.x-ipa.online/"></a><ul class="cl"><a href="https://lingfengqvq2679.github.io/">
 	    <li><h2>神庙逃亡</h2></li>
 	    <li><span>24.7M</span> <span>爱思正版</span>
-	    </li></a><li><a href="https://lingfengqvq2679.github.io">
+	    </li></a><li><a href="https://linghulian.x-ipa.online/">
 </a><a href="https://lingfengqvq.lanzouv.com/iu5H420lihva">点击下载</a>
 </li>
 	    </ul></dd>
