--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 				</a>
 			</div>
 			<div class="tab">
-				<a href="javascript:;">
+				<a href="lingfengqvq2679.github.io/qita/guanyu/guanyu.html">
 					<i class="icon">
 						<img src="https://tse2-mm.cn.bing.net/th/id/OIP-C.vxcxYSFmVwLeD0cOWzi21gHaGI?w=195&amp;h=162&amp;c=7&amp;r=0&amp;o=5&amp;dpr=1.5&amp;pid=1.7">
 					</i>
