--- a/qita/guanyu/guanyu.html
+++ b/qita/guanyu/guanyu.html
@@ -81,6 +81,7 @@
 </touxianglan>
 <h1>用户们大家好</h1>
 <zhuneirong style="disply: block;padding: 30px;max-width: 700px;min-height: 70vh;width: 90%;letter-spacing: 1px;line-height: 1.7;">
+<a href="https://linghulian.x-ipa.online/">返回主页</a>
 <p>介绍一下，我是<a href="https://space.bilibili.com/1815539429?spm_id_from=333.337.0.0">灵风暗叶</a></p>
 <p>这是我亲手写的信息页，感谢你进来看</p>
 <p>说明一下站长还是一个初中生，最近才学习起代码所以网站可能会很烂，我会多多加油的</p>
@@ -155,4 +156,5 @@
 			</div>
 		</div>
 
-</body></html>
+</body>
+</html>
