--- a/qita/guanyu/guanyu.html
+++ b/qita/guanyu/guanyu.html
@@ -37,7 +37,7 @@
 			}
 			a{
 				text-decoration: none;
-				color: #333;
+				color: #00ff14;
 			}
 			
 			.footer{
@@ -89,7 +89,7 @@
 <p>1.球球群：932861855 欢迎来加入我们</p>
 <p>2.站内所有需要密码下载的内容密码均为：ling</p>
 <p> </p>
-<a href="lingfengqvq2679.github.io/qita/guanyu/gengxingrz.html">3.更新日志</a>
+<a href="https://linghulian.x-ipa.online/qita/guanyu/gengxingrz.html">3.更新日志</a>
 </zhuneirong>
 <dibulan style="width: 100%;height: 80px;background-color:#c0c0c0;display: flex;align-items: center;justify-content: center;flex-direction: column;margin: 0px;border: 1px solid #00ff14;padding: 3px;">
 <p style="
