--- a/qita/guanyu/gengxingrz.html
+++ b/qita/guanyu/gengxingrz.html
@@ -83,11 +83,6 @@
 
 <h5>
     <p>1.开始计划筹备网站灵·互联项目</p>
-</h5>
-    <h4>2024年7月10日</h4>
-
-<h5>
-    <p>1.开始计划筹备网站灵·互联项目</p>
 </h5><h4>2024年7月21日</h4>
 
 <h5>
@@ -105,6 +100,11 @@
     <p>2.加入更新日志</p>
     <p>3.加入关于</p>
     <p>4.公告系统</p>
+</h5>
+     <h4>2024年7月27日</h4>
+
+<h5>
+    <p>1.修复Bug</p>
 </h5>
     
     </header>
