--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 				</a>
 			</div>
 			<div class="tab">
-				<a href="lingfengqvq2679.github.io/qita/guanyu/guanyu.html">
+				<a href="lingfengqvq2679.github.io/底部功能区/关于/guanyu.html">
 					<i class="icon">
 						<img src="https://s21.ax1x.com/2024/07/31/pkOf8xO.jpg">
 					</i>
