--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 	</article>
     		<div class="footer">
 			<div class="tab">
-				<a href="https://lingfengqvq.mysxl.cn/lingxzj">
+				<a href="lingfengqvq2679.github.io/底部功能区/小组件/灵·互联—灵风小组件.html">
 					
 					<i class="icon">
 						<img src="https://s21.ax1x.com/2024/07/31/pkOfYse.jpg" style="
