--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 				</a>
 			</div>
 			<div class="tab">
-				<a href="https://lingfengqvq2679.github.io/qita/zhuye/ganxei.html">
+				<a href="lingfengqvq2679.github.io/底部功能区/感谢名单/灵·互联——感谢有你.html">
 					<i class="icon">
 						<img src="https://s21.ax1x.com/2024/07/31/pkOfJMD.jpg">
 					</i>
