--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 				</a>
 			</div>
 			<div class="tab">
-				<a href="https://lingfengqvq.mysxl.cn/yin">
+				<a href="lingfengqvq2679.github.io/底部功能区/相似网站/灵·互联—相似网站.html">
 					<i class="icon">
 						<img src="https://s21.ax1x.com/2024/07/31/pkO7g1I.jpg">
 					</i>
