--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 		<ul class="cl">
         <li class="on"><a href="https://linghulian.x-ipa.online/">主页</a></li>
         <li><a href="lingfengqvq2679.github.io/顶部下载区/个人正版下载区/灵·互联—个人正版.html">个人正版</a></li>
-		<li><a href="https://lingfengqvq.lanzouv.com/b00rn3egpa">爱思正版</a></li>
+		<li><a href="lingfengqvq2679.github.io/顶部下载区/爱思正版下载区/灵·互联—爱思正版.html">爱思正版</a></li>
         <li><a href="https://lingfengqvq.lanzouv.com/b00rn3egoj">越狱软件</a></li></ul></div>
 <marquee><span style="font-weight: bolder;font-size: 18px;color: white;">【公告：】网站全面更新</span></marquee>
 <div class="imgBox">
