--- a/底部功能区/关于/guanyu.html
+++ b/底部功能区/关于/guanyu.html
@@ -90,7 +90,7 @@
 <p>2.站内所有需要密码下载的内容密码均为：ling</p>
 <p>版本：V1.9.9</p>
 <p> </p>
-<a href="https://linghulian.x-ipa.online/qita/guanyu/gengxingrz.html">3.更新日志</a>
+<a href="lingfengqvq2679.github.io/底部功能区/关于/更新日志/灵·互联—更新日志.html">3.更新日志</a>
 </zhuneirong>
 <dibulan style="width: 100%;height: 80px;background-color:#c0c0c0;display: flex;align-items: center;justify-content: center;flex-direction: column;margin: 0px;border: 1px solid #00ff14;padding: 3px;">
 <p style="
