--- a/Computer/zhuye/Computer.html
+++ b/Computer/zhuye/Computer.html
@@ -566,7 +566,7 @@
 <!--返回顶部-->
 <div class="rollbar">
 		<ul class="actions">
-			<li><a target="_blank" href="https://linghulian.x-ipa.online/Computer/zhuye/Computer.html" rel="nofollow noopener noreferrer"><i class="fas fa-user"></i><span>返回顶部</span></a></li>		</ul>
+			<li><a target="_blank" href="https://linghulian.x-ipa.online/Computer/zhuye/Computer.html" rel="nofollow noopener noreferrer"><i class="fas fa-user"></i><span>刷新网站</span></a></li>		</ul>
 	</div>
 
 </body></html>
