--- a/Computer/ganxei/ganxei.html
+++ b/Computer/ganxei/ganxei.html
@@ -138,7 +138,7 @@
 <div class="daohang" style="
     color: #00ff14;
 ">感谢名单</div>
-</a><div class="daohang">版本：v1.0.0</div></div>
+</a><div class="daohang">版本：v1.0.1</div></div>
         <div class=""></div>
     </div>
     <!--主区域-->
@@ -395,7 +395,7 @@
 <!--返回顶部-->
 <div class="rollbar">
 		<ul class="actions">
-			<li><a target="_blank" href="https://linghulian.x-ipa.online/Computer/ganxei/ganxei.html" rel="nofollow noopener noreferrer"><i class="fas fa-user"></i><span>返回顶部</span></a></li>		</ul>
+			<li><a target="_blank" href="https://linghulian.x-ipa.online/Computer/ganxei/ganxei.html" rel="nofollow noopener noreferrer"><i class="fas fa-user"></i><span>刷新网站</span></a></li>		</ul>
 	</div>
 
 </body></html>
