--- a/dibugongneng/ganxei/ganxei.html
+++ b/dibugongneng/ganxei/ganxei.html
@@ -137,12 +137,12 @@
 <a href="https://space.bilibili.com/295509159" style="
     font-size: 15px;
     color: #3F51B5;
-">根浩君 灵·互联就是借用了他的appdoge</a>
+">根浩君 灵·互联手机端就是借用了他的ioszero</a>
 <p> </p>
 <a href="https://lingfengqvq2679.github.io/ganxei.html" style="
     font-size: 15px;
     color: #3F51B5;
-">同学 旧灵风软件站制作的时间很多都是他提供的</a>
+">逆天 旧灵风软件站制作的时间很多都是他提供的</a>
 <p> </p>
 <a href="https://www.bilibili.com/" style="
     font-size: 15px;
@@ -152,16 +152,6 @@
 
 
 </zhuneirong>
-
-
-
-
-
-
-
-
-		
-	
     		<div class="footer">
 			<div class="tab">
 				<a href="https://linghulian.x-ipa.online/dibugongneng/xiaozujian/xiaozujian.html">
