--- a/dibugongneng/guanyu/gengxin/gengxin.html
+++ b/dibugongneng/guanyu/gengxin/gengxin.html
@@ -208,6 +208,16 @@
     <p>2.其它地方微调了一下</p>
     <p>3.提示弹窗更改</p>
 </h5>
+     <h4>2024年8月16日</h4>
+
+<h5>
+    <p>1.（小版本）修改了一些Bug</p>
+</h5>
+     <h4>2024年8月24日</h4>
+
+<h5>
+    <p>1.感谢名单微调了一下</p>
+</h5>
     </header>
     </h3>
 
