--- a/dibugongneng/guanyu/guanyu.html
+++ b/dibugongneng/guanyu/guanyu.html
@@ -113,7 +113,10 @@
 <p>·其它</p>
 <p>1.球球群：932861855 欢迎来加入我们</p>
 <a href="https://qm.qq.com/q/szHZ88USmk">点击链接加入群聊【灵·互联】</a>
-<a href="http://linghulian.kobe.pw/">点击加入群聊【灵·互联I在线聊天平台】（因为没有证书，所以网站可能提示不安全）</a>
+<a href="http://linghulian.kobe.pw/" style="
+    color: #ff9700;
+    display: block;
+">点击加入群聊【灵·互联I在线聊天平台】（因为没有证书，所以网站可能提示不安全）</a>
 <p>2.站内所有需要密码下载的内容密码均为：ling</p>
 <p>版本：V2.0.0</p>
 <p> </p>
