--- a/dibugongneng/xiangsi/xiangsi.html
+++ b/dibugongneng/xiangsi/xiangsi.html
@@ -216,7 +216,7 @@
 <li>
 <a href="https://linghulian.x-ipa.online/">
 </a>
-<a href="https://lingfengqvq.lanzouv.com/b00rn8fjdc" style="
+<a href="https://lingfengqvq.118pan.com/" style="
     color: #0eeeff;
 ">点击打开</a></li>
         </ul></dd>
