--- a/index.html
+++ b/index.html
@@ -141,8 +141,10 @@
  
  };
 </script>
+<!--提示弹窗-->
+<script>alert("欢迎来到灵·互联！欢迎您加入我们的QQ交流群，群号码：932861855如果有Bug请于交流群内汇报")</script>
+<script>alert("ps：密码均为“ling”")</script>
 <!--顶部栏-->
-
 <header class="home-head">
     <div class="head-wrap">
         <div class="top-nav"><span class="menuBtn"></span></div>
