--- a/dibugongneng/guanyu/guanyu.html
+++ b/dibugongneng/guanyu/guanyu.html
@@ -117,7 +117,7 @@
 <p>·其它</p>
 <p>1.球球群：932861855 欢迎来加入我们</p>
 <a href="https://qm.qq.com/q/szHZ88USmk">点击链接加入群聊【灵·互联】</a>
-<a href="http://linghulian.jmcs.cf/" style="
+<a href="linghulian.jkun.cf" style="
     color: #ff9700;
     display: block;
 ">点击加入群聊【灵·互联I在线聊天平台】（因为没有证书，所以网站可能提示不安全）</a>
