--- a/dibugongneng/guanyu/guanyu.html
+++ b/dibugongneng/guanyu/guanyu.html
@@ -117,12 +117,12 @@
 <p>·其它</p>
 <p>1.球球群：932861855 欢迎来加入我们</p>
 <a href="https://qm.qq.com/q/szHZ88USmk">点击链接加入群聊【灵·互联】</a>
-<a href="linghulian.jkun.cf" style="
+<a href="https://linghulian.jkun.cf/" style="
     color: #ff9700;
     display: block;
 ">点击加入群聊【灵·互联I在线聊天平台】（因为没有证书，所以网站可能提示不安全）</a>
 <p>2.站内所有需要密码下载的内容密码均为：ling</p>
-<p>版本：V2.1.2</p>
+<p>版本：V2.1.3</p>
 <p> </p>
 <a href="https://linghulian.x-ipa.online/dibugongneng/guanyu/gengxin/gengxin.html">3.更新日志</a>
 </zhuneirong>
